<resources>
    <string name="app_name">Tuner Helper</string>
    <string name="Home">Home</string>
    <string name="Piano">Piano</string>
    <string name="Guitar">Guitar</string>
    <string name="Violin">Violin</string>
    <string name="Image">Image</string>
    <string name="noteA">A</string>
    <string name="noteAsharp">A#</string>
    <string name="noteB">B</string>
    <string name="noteC">C</string>
    <string name="noteCsharp">C#</string>
    <string name="noteD">D</string>
    <string name="noteDsharp">D#</string>
    <string name="noteE">E</string>
    <string name="noteF">F</string>
    <string name="noteFsharp">F#</string>
    <string name="noteG">G</string>
    <string name="noteGsharp">G#</string>
</resources>